feat(补充使用文档，调整了入参解析功能):

--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -5,6 +5,12 @@
       "type": "java.lang.Boolean",
       "description": "Agile定时任务支持",
       "defaultValue": true
+    },
+    {
+      "name": "agile.task.controller.enable",
+      "type": "java.lang.Boolean",
+      "description": "Agile定时任务对外接口开关",
+      "defaultValue": false
     }
   ]
 }
