--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,7 +1,6 @@
 agile.task.enable=true
-
+agile.task.controller.enable=true
 logging.level.root=INFO
 logging.level.com.agile=DEBUG
-
 logging.file.path=info.log
 spring.task.scheduling.pool.size=10
