--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>Agile定时任务解析器</name>
     <groupId>cloud.agileframework</groupId>
     <artifactId>agile-task</artifactId>
-    <version>2.0.0</version>
+    <version>2.0.5</version>
     <description>Timed task parser</description>
     <url>https://github.com/mydeathtrial/agile-task</url>
 
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>cloud.agileframework</groupId>
             <artifactId>common-util</artifactId>
-            <version>2.0.0</version>
+            <version>2.0.5</version>
         </dependency>
 
         <dependency>
@@ -103,7 +103,29 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
-    
+    <profiles>
+        <profile>
+            <id>with-gpg</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                        <version>1.6</version>
+                        <executions>
+                            <execution>
+                                <id>sign-artifacts</id>
+                                <phase>package</phase>
+                                <goals>
+                                    <goal>sign</goal>
+                                </goals>
+                            </execution>
+                        </executions>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
     <build>
         <plugins>
             <plugin>
@@ -167,20 +189,6 @@
                             <charset>UTF-8</charset>
                             <additionalOptions>-Xdoclint:none</additionalOptions>
                         </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-gpg-plugin</artifactId>
-                <version>1.6</version>
-                <executions>
-                    <execution>
-                        <id>sign-artifacts</id>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>sign</goal>
-                        </goals>
                     </execution>
                 </executions>
             </plugin>
