--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <name>Agile定时任务解析器</name>
     <groupId>cloud.agileframework</groupId>
     <artifactId>agile-task</artifactId>
-    <version>2.0.7.10</version>
+    <version>2.0.8</version>
     <description>Timed task parser</description>
     <url>https://github.com/mydeathtrial/agile-task</url>
 
@@ -89,7 +89,7 @@
         <dependency>
             <groupId>cloud.agileframework</groupId>
             <artifactId>common-util</artifactId>
-            <version>2.0.7.9</version>
+            <version>2.0.8</version>
         </dependency>
 
         <dependency>
@@ -105,7 +105,7 @@
     </dependencies>
     <profiles>
         <profile>
-            <id>agile</id>
+            <id>ossrh</id>
             <build>
                 <plugins>
                     <plugin>
