--- a/src/main/resources/META-INF/additional-spring-configuration-metadata.json
+++ b/src/main/resources/META-INF/additional-spring-configuration-metadata.json
@@ -3,13 +3,13 @@
     {
       "name": "agile.task.enable",
       "type": "java.lang.Boolean",
-      "description": "Agile定时任务支持",
+      "description": "Agile定时任务支持.",
       "defaultValue": true
     },
     {
       "name": "agile.task.controller.enable",
       "type": "java.lang.Boolean",
-      "description": "Agile定时任务对外接口开关",
+      "description": "Agile定时任务对外接口开关.",
       "defaultValue": false
     }
   ]
