--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <name>Agile定时任务解析器</name>
+    <name>agile-task</name>
     <groupId>cloud.agileframework</groupId>
     <artifactId>agile-task</artifactId>
     <version>2.1.0.M5</version>
